# astrometry_net_client

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  todo-list
.github/workflows/: actions.yml
astrometry_net_client/: __init__.py  client.py  config.py  exceptions.py  request.py  session.py  settings.py  statusables.py  uploads.py
astrometry_net_client/scripts/: anc_upload.py
docs/: conf.py  examples.rst  help.rst  index.rst  modules.rst  overview.rst
docs/examples/: client.rst  concurrent_upload.rst  overview.rst  settings.rst
docs/modules/: client.rst  config.rst  exceptions.rst  internal.rst  overview.rst  request.rst  session.rst  settings.rst  statusables.rst  uploads.rst
examples/: client.py  concurrent_upload.py
tests/: conftest.py  constants.py  mocked_server.py  test.py  test_client.py  test_job.py  test_online.py  test_session.py  test_settings.py  test_statusables.py  test_upload.py  utils.py
