[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="astrometry_net_client"
version="0.5.0"
description="A Python interface for the Astrometry.net API."
readme="README.rst"
dependencies=["astropy<=5.3.4", "requests"]
requires-python=">= 3.8"
authors = [
    {name = "Sten Sipma", email="sten.sipma@ziggo.nl"},
]
keywords=["astronomy", "astrometry", "client", "coordinates", "wcs", "api"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
]

[project.scripts]
anc_upload = "astrometry_net_client.scripts.anc_upload:main"

[project.urls]
Repository = "https://github.com/StenSipma/astrometry_net_client"
Documentation = "https://astrometry-net-client.readthedocs.io/en/latest/index.html"


