[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="astrometry_net_client"
version="0.6.0"
description="A Python interface for the Astrometry.net API."
readme="README.rst"
dependencies=["astropy", "requests"]
requires-python=">= 3.11"
authors = [
    {name = "Sten Sipma", email="sten.sipma@ziggo.nl"},
]
keywords=["astronomy", "astrometry", "client", "coordinates", "wcs", "api"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
]

[project.scripts]
anc_upload = "astrometry_net_client.scripts.anc_upload:main"

[project.urls]
Repository = "https://github.com/StenSipma/astrometry_net_client"
Documentation = "https://astrometry-net-client.readthedocs.io/en/latest/index.html"


